* Sat Nov 3 2012 Dan Prince <dprince@redhat.com> - 1.2.0
  - Rename 'job_types' to 'comment_configs' in the config file.
  - Add 'config_template_id' to 'comment_configs' sections. This
    supports the ability to report comments when the same runner
    is used w/ multiple SmokeStack configurations.

* Sun Sep 23 2012 Dan Prince <dprince@redhat.com> - 1.1.3
  - Add support for per project job types in the config file.

* Sun July 29 2012 Dan Prince <dprince@redhat.com> - 1.1.2
  - Add --branch option to stream task.

* Fri July 27 2012 Dan Prince <dprince@redhat.com> - 1.1.1
  - Fix issue where new tests weren't fired via stream task.
  - Include swift in default project list.
  - Add test for stream task.

* Fri July 27 2012 Dan Prince <dprince@redhat.com> - 1.1.0
  - Add new Gerrit stream task to stream gerrit events and sync/fire
    SmokeStack tests.    
  - Add support for per project test suite configurations.
  - Optimize GET requests to SmokeStack for smoke_tests.
  - Tasks now default to using the project list from the config file
    if no project is specified. If a single project is specified then
    the task will only operate on the specified project.
  - Handle missing Gerrit owners in purge task.

* Mon May 17 2012 Dan Prince <dprince@redhat.com> - 1.0.12
  - Ordering fix to ensure job types are displayed in Gerrit comments 
    in the same order they are listed in the config file.

* Mon May 7 2012 Dan Prince <dprince@redhat.com> - 1.0.11
  - The comment task now uses Gerrit 'verified' to report results.
    It votes with -1 and +1 based on SmokeStack results.
  - Add 'projects' config option. Defaults to ['nova', 'keystone', 'glance']
  - Add 'job_types' config option. The comment task now makes use of
    configurable job_types when determining when results are present
    and approved.

* Mon Jan 9 2012 Dan Prince <dan.prince@rackspace.com> - 1.0.10
  - Fix 'undefined method `[]' for nil:NilClass' error that could occur in