@@ -14,11 +14,15 @@ module Bellows
     end
 
     def self.reviews(project, status="open", branch="master")
+      # Assume projects without a slash are 'openstack' org projects
+      #if not x =~ /.*\/.*/ then
+      #  project = "openstack/#{project}"
+      #end
       reviews = []
-      out=Gerrit.run_cmd(%{query status:#{status} project:openstack/#{project} branch:#{branch} limit:500 --current-patch-set --format JSON})
+      out=Gerrit.run_cmd(%{query status:#{status} project:#{project} branch:#{branch} limit:500 --current-patch-set --format JSON})
       out.each_line do |line|
         data = JSON.parse(line)
-        if data['project'] and data['project'] == "openstack/#{project}" and data['branch'] and data['branch'] == branch
+        if data['project'] and data['project'] == "#{project}" and data['branch'] and data['branch'] == branch
           if block_given?
             yield data
           else
